OP-39: Fix links from nes line on mobile.

--- a/app/assets/stylesheets/pages/member/explore.sass
+++ b/app/assets/stylesheets/pages/member/explore.sass
@@ -16,5 +16,4 @@
   padding: 0
 
 .sits-select-form
-  @media (min-width: 990px)
-    padding-left: 0
+  padding-left: 0 !important
